--- a/style.css
+++ b/style.css
@@ -212,6 +212,12 @@ input:focus {
   box-shadow: 0 2rem 5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
+.error_text {
+  font-size: 2rem;
+  color: #eee;
+  font-weight: 900;
+}
+
 @media only screen and (max-width: 760px) {
   .county {
     text-align: center;
@@ -220,6 +226,9 @@ input:focus {
     flex-direction: column;
 
     height: 30rem;
+  }
+  .error_text {
+    font-size: 1.6rem;
   }
 }
 
@@ -340,6 +349,10 @@ input:focus {
 
   .country__row span {
     margin-right: 1rem;
+    font-size: 1rem;
+  }
+
+  .error_text {
     font-size: 1rem;
   }
 }
